2005.01.07
----------
- think i finally fixed what was causing all the crashes, for some reason i was
unparenting widgets instead of removing them from their containers
- ready for 0.4.2, the real release of the 0.4.x series


2005.01.04
----------
- some 'correctness' fixes, like giving dialogs parents if applicable
- forgot to package the 'tag' plugin which is a major feature for 0.4.x, yes 
i'm an idiot
- tweaks to the example xsl stylesheet in the formatter plugin 
(labels.xsl, larger_label.xsl)
- removed all signs of threading code, there's no going back
- the SpeciesMetaEditor now just uses the vbox from the glade file instead
of destroying the dialog it was graciously given by TableEditorDialog only to 
replace it by another dialog


2005.01.04
----------
- fixed bug where editing an existing SpeciesMeta would just create a new
one
- back to deleting dialogs instead of just hiding them
- abcd export and formatter wouldn't work if a Species SpeciesMeta was None


2005.01.03
----------
- did a terrible job packaging 0.4.0 and probably earlier version, should 
be better now
- results in the search view are now sorted alphabetically


2005.01.02
----------
- drastically improved csv export speed by about a million percent by 
using map()
- some fixes for win32, mostly works now
- ready for 0.4.0
- released 0.4.0
- tried to get rid of that annoying dialog caused by the logger
- rearranged the sys.path to put library.zip in front when using py2exe so
that libxml2 get imported correctly, this fixes the formatter on win32


2005.12.31
----------
- small regression fix for opening databases created with a version different 
from the version of Bauble you're using
- properly handle exception thrown when importing csv files


2005.12.30
----------
- you can now do 'OR'ed searches with by separting values with a comma, 
e.g 2004.0001,2004.0002 would give you both accessions with those acc_id's


2005.12.28
----------
- fixed datetime issues with the CollectionEditor